# LightHouse

./: Jatekosok.py  README.md  Sodoku.py  Zingo.py  pyproject.toml  readme.md
Sodoku/: Sodoku.py
Sudoku/: Sudoku.py
ZINGO/: Jatekosok.py
